--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Demon Slayers</title>
+  <title>Demon Slayers Cricket Team Players</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -79,7 +79,7 @@
 </head>
 <body>
 
-  <h2>Demon Slayers</h2>
+  <h2>Demon Slayers Cricket Team Players</h2>
 
   <!-- Player 1 -->
   <div class="player-card">
@@ -211,4 +211,5 @@
 
 </body>
 </html>
+
 
