--- a/index.html
+++ b/index.html
@@ -203,6 +203,18 @@
     </div>
   </div>
 
+   <!-- Player 11 -->
+  <div class="player-card">
+    <input type="checkbox" id="abhi" class="toggle">
+    <label for="abhi">
+      <img src="abhi.jpg" alt="Abhi" class="player-img">
+    </label>
+    <div class="info">
+      <div class="name">Abhi</div>
+      <div class="role">Bowler</div>
+    </div>
+  </div>
+
      
 
 
@@ -211,5 +223,6 @@
 
 </body>
 </html>
+
 
 
