--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
       font-size: 16px;
       color: #555;
     }
+
+     h3 {
+      text-align: center;
+      display: inline-block;
+      background: rgba(0,0,0,0.7);
+      color: #fff;
+      padding: 12px 30px;
+      border-radius: 10px;
+      margin: 20px auto 40px;
+      font-size: 30px;
+      letter-spacing: 1px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+    }
   </style>
 </head>
 <body>
@@ -215,14 +228,47 @@
     </div>
   </div>
 
-     
+   <h3>Extra Players</h3>
 
+   <!-- Player 12 -->
+  <div class="player-card">
+    <input type="checkbox" id="nani" class="toggle">
+    <label for="nani">
+      <img src="nani.jpg" alt="Nani" class="player-img">
+    </label>
+    <div class="info">
+      <div class="name">Nani</div>
+      <div class="role">Batter</div>
+    </div>
+  </div>
 
-
+  <!-- Player 13 -->
+  <div class="player-card">
+    <input type="checkbox" id="muni" class="toggle">
+    <label for="muni">
+      <img src="muni.jpg" alt="Muni" class="player-img">
+    </label>
+    <div class="info">
+      <div class="name">Muni</div>
+      <div class="role">Batter</div>
+    </div>
+  </div>
+ <!-- Player 14 -->
+  <div class="player-card">
+    <input type="checkbox" id="siva" class="toggle">
+    <label for="siva">
+      <img src="siva.jpg" alt="Siva" class="player-img">
+    </label>
+    <div class="info">
+      <div class="name">Siva</div>
+      <div class="role">Batter</div>
+    </div>
+  </div>
 
 
 </body>
 </html>
+
 
 
 
