--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
     </label>
     <div class="info">
       <div class="name">Mohan</div>
+      <div class="name">Captain</div>
       <div class="role">Bowler</div>
     </div>
   </div>
@@ -150,6 +151,7 @@
     </label>
     <div class="info">
       <div class="name">Rajesh</div>
+      <div class="name">Vice Captain</div>
       <div class="role">Bowler</div>
     </div>
   </div>
@@ -228,6 +230,18 @@
     </div>
   </div>
 
+     <!-- Player 12 -->
+  <div class="player-card">
+    <input type="checkbox" id="prasad" class="toggle">
+    <label for="prasad">
+      <img src="prasad.jpg" alt="Prasad" class="player-img">
+    </label>
+    <div class="info">
+      <div class="name">Prasad</div>
+      <div class="role">Batter</div>
+    </div>
+  </div>
+
    <h3>Extra Players</h3>
 
    <!-- Player 12 -->
@@ -268,6 +282,7 @@
 
 </body>
 </html>
+
 
 
 
